k8s/spire/spire.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: spire-bundle
  namespace: spire
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`spire-bundle-k8s.wheat-dn42.net`)
      services:
        - name: spire-server
          port: 8443
          scheme: https
          serversTransport: spire-bundle-transport
  tls:
    secretName: wildcard-wheat-dn42-net-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: spire-oidc
  namespace: spire
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`oidc-k8s.wheat-dn42.net`)
      services:
        - name: spire-spiffe-oidc-discovery-provider
          port: 443
      middlewares:
        - name: traefik-headers
          namespace: wheat-system
  tls:
    secretName: wildcard-wheat-dn42-net-secret
